k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kdex-proxy
  labels:
    app: kdex-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kdex-proxy
  template:
    metadata:
      labels:
        app: kdex-proxy
    spec:
      containers:
      # For testing. Copy module files onto the volume: `k cp -c bash <source> <pod>:/modules/`
      - name: bash
        image: bash
        command: ["/usr/local/bin/bash", "-c", "sleep infinity"]
        volumeMounts:
        - mountPath: /modules
          name: kdex-proxy-pvc
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
      - name: proxy
        image: registry:5000/kdex-tech/proxy:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /~/p
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /~/p
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - mountPath: /modules
          name: kdex-proxy-pvc
        - mountPath: /etc/kdex/module_body
          name: kdex-proxy-config
          subPath: module_body
        - mountPath: /etc/kdex/module_dependencies
          name: kdex-proxy-config
          subPath: module_dependencies
        - mountPath: /etc/kdex/module_imports
          name: kdex-proxy-config
          subPath: module_imports
      volumes:
      - name: kdex-proxy-config
        configMap:
          name: kdex-proxy-config
      - name: kdex-proxy-pvc
        persistentVolumeClaim:
          claimName: kdex-proxy-pvc
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
