k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kdex-proxy
  labels:
    app: kdex-proxy
spec:
  selector:
    app: kdex-proxy
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
